k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo-app
  labels:
    app: todo-app
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: NodePort
  # type: LoadBalancer
  selector:
    app: todo-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  # sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
